2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-options.c (standard_options): Always enable load-lma and
	load-vma options.
	(standard_install): Always set STATE_LOAD_AT_LMA_P(sd) to 1.

2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-module.c (MODULE_LIST): Delete.

2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-options.c (OPTION_H8300H, OPTION_H8300S, OPTION_H8300SX):
	Move to h8300/compile.c.
	[SIM_H8300] (standard_options): Likewise.
	(standard_option_handler): Likewise.

2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-module.c [WITH_WATCHPOINTS] (modules): Always call
	sim_watchpoint_install.

2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-base.h [SIM_HAVE_FLATMEM] (sim_state_base): Delete flatmem code.
	* sim-module.c [SIM_HAVE_FLATMEM] (modules): Always call
	sim_memopt_install.
	* sim-options.c (OPTION_MEM_SIZE): Delete.
	[SIM_HAVE_FLATMEM] (standard_options): Delete flatmem code.
	(standard_option_handler): Likewise.

2015-12-24  Mike Frysinger  <vapier@gentoo.org>

	* tconfig.h (SIM_HAVE_SIMCACHE): Delete.

2015-11-21  Mike Frysinger  <vapier@gentoo.org>

	PR sim/18762
	* Makefile.in (CPPFLAGS, CXXFLAGS, LDFLAGS): Define.

2015-11-21  Mike Frysinger  <vapier@gentoo.org>

	PR sim/19273
	* sim-utils.c (sim_do_commandf): Declare ret.  Call va_start,
	vasprintf, and va_end together.  Check ret after va_end call.

2015-11-21  Mike Frysinger  <vapier@gentoo.org>

	* sim-types.h (SIM_PRI_TB): Define.
	(PRI_TW, PRIiTW, PRIxTW): New PRI target word defines.
	(PRI_TA, PRIiTA, PRIxTA): New PRI target address defines.
	(PRI_TC, PRIiTC, PRIxTC): New PRI target cell defines.
	(PRI_TF, PRIiTF, PRIxTF): New PRI target floating point defines.

2015-11-17  Mike Frysinger  <vapier@gentoo.org>

	* sim-main.h (WITH_MODULO_MEMORY): Delete.
	* sim-core.c (new_sim_core_mapping): Always assign mask to modulo-1.
	(sim_core_attach): Delete WITH_MODULO_MEMORY == 0 logic.
	(sim_core_translate): Likewise.